Bug 86980 - [V8] Pass Isolate to throwError()s in V8 custom bindings (Part 1)
Summary: [V8] Pass Isolate to throwError()s in V8 custom bindings (Part 1)
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore JavaScript (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kentaro Hara
URL:
Keywords:
Depends on:
Blocks: 84074
  Show dependency treegraph
 
Reported: 2012-05-20 19:16 PDT by Kentaro Hara
Modified: 2012-05-20 23:28 PDT (History)
5 users (show)

See Also:


Attachments
Patch (18.50 KB, patch)
2012-05-20 19:18 PDT, Kentaro Hara
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kentaro Hara 2012-05-20 19:16:20 PDT
The objective is to pass Isolate around in V8 bindings. In this bug we pass Isolate to throwError()s in V8 custom bindings.
Comment 1 Kentaro Hara 2012-05-20 19:18:24 PDT
Created attachment 142935 [details]
Patch
Comment 2 WebKit Review Bot 2012-05-20 23:28:11 PDT
Comment on attachment 142935 [details]
Patch

Clearing flags on attachment: 142935

Committed r117733: <http://trac.webkit.org/changeset/117733>
Comment 3 WebKit Review Bot 2012-05-20 23:28:16 PDT
All reviewed patches have been landed.  Closing bug.