Source/WebCore/bindings/v8/custom/V8ClipboardCustom.cpp
@@ -73,7 +73,7 @@ v8::Handle<v8::Value> V8Clipboard::clearDataCallback(const v8::Arguments& args)
     }
 
     if (args.Length() != 1)
-        return V8Proxy::throwError(V8Proxy::SyntaxError, "clearData: Invalid number of arguments");
+        return V8Proxy::throwError(V8Proxy::SyntaxError, "clearData: Invalid number of arguments", args.GetIsolate());
 
     String type = toWebCoreString(args[0]);
     clipboard->clearData(type);
@@ -89,7 +89,7 @@ v8::Handle<v8::Value> V8Clipboard::setDragImageCallback(const v8::Arguments& arg
         return v8::Undefined();
 
     if (args.Length() != 3)
-        return V8Proxy::throwError(V8Proxy::SyntaxError, "setDragImage: Invalid number of arguments");
+        return V8Proxy::throwError(V8Proxy::SyntaxError, "setDragImage: Invalid number of arguments", args.GetIsolate());
 
     int x = toInt32(args[1]);
     int y = toInt32(args[2]);
